fix: padding left on mobile

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -35,7 +35,7 @@
 
     ol {
       counter-reset: custom-counter;
-      @apply pl-10 md:pl-4 sm:pl-0;
+      @apply pl-10 md:pl-4;
 
       > li {
         counter-increment: custom-counter;
